# omnibin

./: .gitignore  CHANGELOG.md  README.md  app.py  example.py  pyproject.toml  requirements.txt  scores.csv  setup.py
.github/workflows/: deploy.yml  test.yml  update-hf-space.yml
data/examples/: classification_example.csv  detection_example.json  regression_example.csv  segmentation_2d_ground_truth.npy  segmentation_2d_prediction.npy  segmentation_3d_ground_truth.npy  segmentation_3d_prediction.npy  segmentation_multiclass_ground_truth.npy  segmentation_multiclass_prediction.npy  text_generation_example.csv
omnibin/: __init__.py  detection_metrics.py  detection_utils.py  llm_provider.py  metrics.py  regression_metrics.py  regression_utils.py  segmentation_metrics.py  segmentation_utils.py  text_generation_metrics.py  text_generation_utils.py  utils.py
omnibin/judge_metrics/: __init__.py  _crimson_api.py  _green_api.py  _prompts.py  _radfact_api.py  crimson.py  green.py  radfact.py
omnibin/judge_metrics/_crimson_vendor/: __init__.py  score.py
scripts/: generate_example_data.py
tests/: __init__.py  test_detection_metrics.py  test_metrics.py  test_regression_metrics.py  test_segmentation_metrics.py  test_text_generation_metrics.py
