[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omnibin"
version = "0.2.0"
description = "A comprehensive package for generating ML evaluation reports with visualizations and confidence intervals - supports classification, regression, segmentation, and detection with healthcare focus"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Felipe Campos Kitamura", email = "kitamura.felipe@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
    "scipy>=1.7.0",
    "seaborn>=0.11.0",
    "tqdm>=4.60.0",
]

[project.urls]
Homepage = "https://github.com/kitamura-felipe/omnibin"
Repository = "https://github.com/kitamura-felipe/omnibin.git"
