[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omnibin"
version = "0.3.1"
description = "A comprehensive package for generating ML evaluation reports with visualizations and confidence intervals - supports classification, regression, segmentation, detection, and text generation with healthcare focus"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Felipe Campos Kitamura", email = "kitamura.felipe@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
    "scipy>=1.7.0",
    "seaborn>=0.11.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
# Lexical text-generation metrics (BLEU / ROUGE / METEOR / BERTScore)
text = [
    "sacrebleu>=2.3.0",
    "rouge-score>=0.1.2",
    "nltk>=3.8.1",
    "bert-score>=0.3.13",
]
# Unified LLM provider router for judge metrics (OpenAI / Anthropic / Google / OpenRouter / Groq)
llm-judge = [
    "litellm>=1.40.0",
]
# Stanford-AIMI GREEN — local HF model, GPU recommended
green = [
    "green-score>=0.0.12",
]
# microsoft/radfact — git install; conflicts with pydantic 2 / Gradio 5, install in a separate env
radfact = [
    "radfact @ git+https://github.com/microsoft/radfact.git",
]
# rajpurkarlab/CRIMSON
crimson = [
    "crimson-score>=0.2.0",
]
# Everything above except radfact (kept separate due to pydantic 1.x pin)
all-text = [
    "sacrebleu>=2.3.0",
    "rouge-score>=0.1.2",
    "nltk>=3.8.1",
    "bert-score>=0.3.13",
    "litellm>=1.40.0",
    "green-score>=0.0.12",
    "crimson-score>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/kitamura-felipe/omnibin"
Repository = "https://github.com/kitamura-felipe/omnibin.git"
